<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout"
    tools:context=".RotationBuilderFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/court_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412">

        <ImageView
            android:id="@+id/court"
            android:layout_width="315dp"
            android:layout_height="315dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/court" />

        <View
            android:id="@+id/attack_line"
            android:layout_width="315dp"
            android:layout_height="5dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/court"
            app:layout_constraintEnd_toEndOf="@+id/court"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/court"
            app:layout_constraintTop_toTopOf="@+id/court"
            app:layout_constraintVertical_bias="0.38" />

        <TextView
            android:id="@+id/I"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/s"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="@+id/court"
            app:layout_constraintEnd_toEndOf="@+id/court"
            app:layout_constraintHorizontal_bias="0.89"
            app:layout_constraintStart_toStartOf="@+id/court"
            app:layout_constraintTop_toTopOf="@+id/court"
            app:layout_constraintVertical_bias="0.729" />

        <TextView
            android:id="@+id/II"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/oh1"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="@+id/court"
            app:layout_constraintEnd_toEndOf="@+id/court"
            app:layout_constraintHorizontal_bias="0.89"
            app:layout_constraintStart_toStartOf="@+id/court"
            app:layout_constraintTop_toTopOf="@+id/court"
            app:layout_constraintVertical_bias="0.129" />

        <TextView
            android:id="@+id/III"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/mb2"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="@+id/court"
            app:layout_constraintEnd_toEndOf="@+id/court"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/court"
            app:layout_constraintTop_toTopOf="@+id/court"
            app:layout_constraintVertical_bias="0.129" />

        <TextView
            android:id="@+id/IV"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/rs"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="@+id/court"
            app:layout_constraintEnd_toEndOf="@+id/court"
            app:layout_constraintHorizontal_bias="0.113"
            app:layout_constraintStart_toStartOf="@+id/court"
            app:layout_constraintTop_toTopOf="@+id/court"
            app:layout_constraintVertical_bias="0.129" />

        <TextView
            android:id="@+id/V"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/oh2"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="@+id/court"
            app:layout_constraintEnd_toEndOf="@+id/court"
            app:layout_constraintHorizontal_bias="0.113"
            app:layout_constraintStart_toStartOf="@+id/court"
            app:layout_constraintTop_toTopOf="@+id/court"
            app:layout_constraintVertical_bias="0.733" />

        <TextView
            android:id="@+id/VI"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/mb1"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="@+id/court"
            app:layout_constraintEnd_toEndOf="@+id/court"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/court"
            app:layout_constraintTop_toTopOf="@+id/court"
            app:layout_constraintVertical_bias="0.729" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/rotation_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/test"
        app:layout_constraintBottom_toTopOf="@+id/court_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotation_name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/down_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DOWN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/court_layout"
        app:layout_constraintVertical_bias="0.518"
        android:layout_marginBottom="?android:attr/actionBarSize"/>

    <Button
        android:id="@+id/left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="?android:attr/actionBarSize"
        android:text="LEFT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/down_button"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/court_layout"
        app:layout_constraintVertical_bias="0.508" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="?android:attr/actionBarSize"
        android:text="RIGHT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toEndOf="@+id/down_button"
        app:layout_constraintTop_toBottomOf="@+id/court_layout"
        app:layout_constraintVertical_bias="0.508" />

    <Button
        android:id="@+id/up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="UP"
        app:layout_constraintBottom_toTopOf="@+id/down_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/court_layout"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/rotation_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_rotation_name_here"
        app:layout_constraintBottom_toTopOf="@+id/rotation_text"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="Save"
        app:layout_constraintBottom_toTopOf="@+id/rotation_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/rotation_name"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="Reset"
        app:layout_constraintBottom_toTopOf="@+id/court_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/rotation_text"
        app:layout_constraintTop_toBottomOf="@+id/save_button"
        app:layout_constraintVertical_bias="0.666" />

</androidx.constraintlayout.widget.ConstraintLayout>